--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Workflow:
     </main>
 
     <footer class="max-w-6xl mx-auto px-4 py-8 text-center text-xs text-zinc-500">
-      © <span id="year"></span> Your Name
+      © <span id="year"></span> Diesel Designs
     </footer>
 
     <template id="itemRowTpl">
