--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="sticky top-0 z-30 bg-white/90 backdrop-blur border-b-2" style="border-color:var(--brand)">
       <div class="max-w-6xl mx-auto px-4 py-3 flex items-center gap-3">
         <img src="https://cdn.shopify.com/s/files/1/0659/3023/2034/files/LogowithWebsite_3b736bf3-8f06-4553-bed2-68878cd7395a.png?v=1757448093" alt="Diesel Designs" class="h-8 w-auto" />
-        <h1 id="appTitle" class="text-lg font-semibold tracking-tight">Portfolio</h1>
+        <h1 id="appTitle" class="text-lg font-semibold tracking-tight">Webkit Options</h1>
         <span id="status" class="text-xs text-zinc-500"></span>
         <div id="adminBar" class="ml-auto hidden items-center gap-2">
           <label class="px-3 py-2 rounded-xl bg-zinc-100 hover:bg-zinc-200 cursor-pointer">
