--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Portfolio — Viewer & Admin</title>
+    <title>Webkit options for Diesel Designs</title>
     <script>tailwind={}; tailwind.config={ theme:{ extend:{ colors:{ brand:{ purple:'#8D6CE5' }}}}};</script>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
