--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ tailwind={}; tailwind.config={ theme:{ extend:{ colors:{ brand:{ purple:'#8D6CE5
       <div class="max-w-6xl mx-auto px-4 py-4 flex flex-col gap-3">
         <!-- Centered logo + title -->
         <div class="flex flex-col items-center justify-center gap-2">
-          <img src="https://cdn.shopify.com/s/files/1/0659/3023/2034/files/LogowithWebsite_3b736bf3-8f06-4553-bed2-68878cd7395a.png?v=1757448093" alt="Diesel Designs" class="h-16 w-auto" />
+          <img src="https://cdn.shopify.com/s/files/1/0659/3023/2034/files/LogowithWebsite_3b736bf3-8f06-4553-bed2-68878cd7395a.png?v=1757448093" alt="Diesel Designs" class="h-20 w-auto" />
           <h1 id="appTitle" class="text-2xl font-semibold tracking-tight text-center">Webkit Options</h1>
         </div>
         <!-- Controls row -->
@@ -199,14 +199,31 @@ tailwind={}; tailwind.config={ theme:{ extend:{ colors:{ brand:{ purple:'#8D6CE5
       function setBanner(html){ const b=$('#banner'); if(!html){b.classList.add('hidden'); b.innerHTML=''; return;} b.classList.remove('hidden'); b.innerHTML=html; }
       function syncURL(){ const u=new URL(location); u.searchParams.set('mode','view'); u.searchParams.set('view', App.view==='flip'?'flip':'grid'); history.replaceState({},'',u); }
       function renderAll(){ $('#gridBtn').classList.toggle('bg-[color:var(--brand)]/10', App.view==='grid'); $('#flipBtn').classList.toggle('bg-[color:var(--brand)]/10', App.view==='flip'); if (App.view==='grid'){ stopAutoplay(); $('#gridView').classList.remove('hidden'); $('#flipView').classList.add('hidden'); renderGrid(); } else { $('#gridView').classList.add('hidden'); $('#flipView').classList.remove('hidden'); renderFlip(); } }
-      function renderGrid(){ const host=$('#gridView'); host.innerHTML=''; if(!App.items.length){ host.innerHTML='<div class="text-sm text-zinc-500">No items to show.</div>'; return; } const grid=document.createElement('div'); grid.className='grid gap-3 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4'; App.items.forEach(it=>grid.appendChild(gridCard(it))); host.appendChild(grid); }
-      function gridCard(it){ const fig=document.createElement('figure'); fig.className='rounded-2xl overflow-hidden border bg-white'; const img=new Image(); img.src=it.src; img.alt=it.title||''; img.loading='lazy'; img.className='w-full h-48 object-cover bg-zinc-100'; img.draggable=false; const cap=document.createElement('figcaption'); cap.className='p-2 text-lg font-semibold text-zinc-900'; cap.innerHTML=`<span class="truncate" title="${escapeHtml(it.title)}">${escapeHtml(it.title)}</span>`; fig.appendChild(img); fig.appendChild(cap); return fig; }
+      function renderGrid(){ const host=$('#gridView'); host.innerHTML=''; if(!App.items.length){ host.innerHTML='<div class="text-sm text-zinc-500">No items to show.</div>'; return; } const grid=document.createElement('div'); grid.className='grid gap-3 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4'; App.items.forEach((it,i)=>grid.appendChild(gridCard(it,i))); host.appendChild(grid); }
+      function gridCard(it, i){ const fig=document.createElement('figure'); fig.className='rounded-2xl overflow-hidden border bg-white cursor-zoom-in'; const img=new Image(); img.src=it.src; img.alt=it.title||''; img.loading='lazy'; img.className='w-full h-48 object-cover bg-zinc-100'; img.draggable=false; const cap=document.createElement('figcaption'); cap.className='p-2 text-lg font-semibold text-zinc-900'; cap.innerHTML=`<span class="truncate" title="${escapeHtml(it.title)}">${escapeHtml(it.title)}</span>`; fig.appendChild(img); fig.appendChild(cap); fig.addEventListener('click', ()=> openLightbox(i)); return fig; }
       let idx=0, autoTimer=null, autoMs=3000;
       function renderFlip(){ const list=App.items; App.flat=list; if(!list.length){ $('#flipViewport').innerHTML='<div class="text-sm text-zinc-500">No items.</div>'; $('#flipMeta').textContent=''; return; } if(idx>=list.length) idx=0; showSlide(); $('#prevBtn').onclick=()=>step(-1); $('#nextBtn').onclick=()=>step(1); const playBtn=$('#playBtn'); const speedSel=$('#speedSel'); if(playBtn) playBtn.onclick=()=>{ if(autoTimer) stopAutoplay(); else startAutoplay(); }; if(speedSel) speedSel.onchange=(e)=>{ autoMs=parseInt(e.target.value,10)||3000; if(autoTimer) startAutoplay(); }; const vp=$('#flipViewport'); let sx=0,sy=0,tr=false; vp.onpointerdown=e=>{tr=true;sx=e.clientX;sy=e.clientY}; vp.onpointerup=e=>{ if(!tr)return; tr=false; const dx=e.clientX-sx,dy=e.clientY-sy; if(Math.abs(dx)>40&&Math.abs(dx)>Math.abs(dy)) step(dx<0?1:-1); } }
       function showSlide(){ const it=App.flat[idx]; const vp=$('#flipViewport'); vp.innerHTML=''; const img=new Image(); img.src=it.src; img.alt=it.title||''; img.className='max-w-full max-h-full rounded-lg shadow'; img.draggable=false; vp.appendChild(img); const meta=`${idx+1} / ${App.flat.length} • ${it.title}`; const metaEl=$('#flipMeta'); if(metaEl) metaEl.textContent=meta; }
       function startAutoplay(){ stopAutoplay(); autoTimer=setInterval(()=>step(1), autoMs); const b=$('#playBtn'); if(b) b.textContent='Pause'; }
       function stopAutoplay(){ if(autoTimer){ clearInterval(autoTimer); autoTimer=null; } const b=$('#playBtn'); if(b) b.textContent='Play'; }
       function step(d){ idx=(idx+d+App.flat.length)%App.flat.length; showSlide(); }
+
+      // Lightbox (full image on grid click)
+      let lbOpen=false, lbIdx=0;
+      function openLightbox(i){
+        lbIdx = i;
+        const lb = document.getElementById('lightbox');
+        const img = document.getElementById('lbImg');
+        const cap = document.getElementById('lbCaption');
+        const it = App.items[lbIdx];
+        if (!it || !lb || !img) return;
+        img.src = it.src; img.alt = it.title || '';
+        if (cap) cap.textContent = it.title || '';
+        lb.classList.remove('hidden'); lbOpen = true;
+      }
+      function closeLightbox(){ const lb=document.getElementById('lightbox'); if(lb) lb.classList.add('hidden'); lbOpen=false; }
+      function lbStep(d){ if(!App.items.length) return; lbIdx=(lbIdx+d+App.items.length)%App.items.length; const it=App.items[lbIdx]; const img=document.getElementById('lbImg'); const cap=document.getElementById('lbCaption'); if(img&&it){ img.src=it.src; img.alt=it.title||''; } if(cap) cap.textContent=it.title||''; }
+      document.addEventListener('keydown', (e)=>{ if(!lbOpen) return; if(e.key==='Escape') closeLightbox(); if(e.key==='ArrowLeft') lbStep(-1); if(e.key==='ArrowRight') lbStep(1); });
 
       // -------- Utils --------
       function setStatus(msg){
@@ -219,5 +236,15 @@ tailwind={}; tailwind.config={ theme:{ extend:{ colors:{ brand:{ purple:'#8D6CE5
       function fileToDataURL(file){ return new Promise((res,rej)=>{ const fr=new FileReader(); fr.onload=()=>res(fr.result); fr.onerror=rej; fr.readAsDataURL(file); }); }
       function splitDataUrl(dataUrl){ const m=String(dataUrl).match(/^data:([^;]+);base64,(.*)$/); return [m?.[1]||'image/jpeg', m?.[2]||'']; }
     </script>
-  </body>
+    <!-- Lightbox overlay -->
+  <div id="lightbox" class="fixed inset-0 bg-black/80 backdrop-blur flex items-center justify-center p-4 z-50 hidden" onclick="closeLightbox()">
+    <button class="absolute left-4 top-1/2 -translate-y-1/2 bg-white/90 hover:bg-white border rounded-xl px-3 py-2" onclick="event.stopPropagation(); lbStep(-1)">‹</button>
+    <div class="max-w-7xl w-full" onclick="event.stopPropagation()">
+      <img id="lbImg" alt="Full image" class="mx-auto max-w-[90vw] max-h-[85vh] rounded-xl shadow" draggable="false" />
+      <div id="lbCaption" class="mt-2 text-center text-sm text-white/90"></div>
+    </div>
+    <button class="absolute right-4 top-1/2 -translate-y-1/2 bg-white/90 hover:bg-white border rounded-xl px-3 py-2" onclick="event.stopPropagation(); lbStep(1)">›</button>
+    <button class="absolute top-4 right-4 bg-white/90 hover:bg-white border rounded-xl px-3 py-2" onclick="event.stopPropagation(); closeLightbox()">Close</button>
+  </div>
+</body>
 </html>
