--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@ tailwind={}; tailwind.config={ theme:{ extend:{ colors:{ brand:{ purple:'#8D6CE5
       <!-- Viewer UI (default) -->
       <section id="viewerUI" class="hidden space-y-4">
         <div id="banner" class="hidden p-3 rounded-xl border bg-amber-50 text-amber-900 text-sm"></div>
+        <div id="note" class="p-3 rounded-xl border bg-zinc-100 text-zinc-800 text-sm">
+          ✨ Thanks for choosing <b>Diesel Designs</b> for your website revamp! Browse the webkit themes below. Click any image to enlarge. The webkit name is under each preview—please enter that exact name on the form. 💻
+        </div>
         <section id="gridView" class="grid gap-6"></section>
         <section id="flipView" class="hidden">
           <div class="relative rounded-2xl border bg-white overflow-hidden">
