--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@ tailwind={}; tailwind.config={ theme:{ extend:{ colors:{ brand:{ purple:'#8D6CE5
         <div id="note" class="p-3 rounded-xl border bg-zinc-100 text-zinc-800 text-sm">
           ✨ Thanks for choosing <b>Diesel Designs</b> for your website revamp! Browse the webkit themes below. Click any image to enlarge. The webkit name is under each preview—please enter that exact name on the form. 💻
         </div>
+        <div id="catTabs" class="flex flex-wrap gap-2"></div>
         <section id="gridView" class="grid gap-6"></section>
         <section id="flipView" class="hidden">
           <div class="relative rounded-2xl border bg-white overflow-hidden">
@@ -116,6 +117,9 @@ tailwind={}; tailwind.config={ theme:{ extend:{ colors:{ brand:{ purple:'#8D6CE5
           <label class="text-xs text-zinc-500">Title
             <input class="w-full mt-1 px-3 py-2 rounded-xl border focus:outline-none focus:ring-2 focus:ring-zinc-900" />
           </label>
+          <label class="text-xs text-zinc-500">Category
+            <input class="w-full mt-1 px-3 py-2 rounded-xl border focus:outline-none focus:ring-2 focus:ring-zinc-900" />
+          </label>
         </div>
         <button class="shrink-0 text-xs px-2 py-1 rounded-lg bg-red-50 text-red-700 hover:bg-red-100">Remove</button>
       </div>
@@ -127,7 +131,7 @@ tailwind={}; tailwind.config={ theme:{ extend:{ colors:{ brand:{ purple:'#8D6CE5
       const mode = (params.get('mode')||'view').toLowerCase();
 
       // ---------- State ----------
-      const App = { items: [], view: 'grid', flat: [], title: 'Portfolio' };
+      const App = { items: [], view: 'grid', flat: [], title: 'Portfolio', filter: 'all' };
       const $ = (s,r=document)=>r.querySelector(s);
       const $$ = (s,r=document)=>[...r.querySelectorAll(s)];
       const status = $('#status');
@@ -164,35 +168,36 @@ tailwind={}; tailwind.config={ theme:{ extend:{ colors:{ brand:{ purple:'#8D6CE5
       }
       async function handleFiles(files){
         const arr=[...files]; if(!arr.length) return; setStatus('Reading…');
-        for(const f of arr){ if(!f.type.startsWith('image/')) continue; const dataUrl=await fileToDataURL(f); const [mime,data]=splitDataUrl(dataUrl); App.items.push({ title:stripExt(f.name), mime, data }); }
+        for(const f of arr){ if(!f.type.startsWith('image/')) continue; const dataUrl=await fileToDataURL(f); const [mime,data]=splitDataUrl(dataUrl); App.items.push({ title:stripExt(f.name), category:'', mime, data }); }
         renderAdminList(); setStatus(`Ready (${App.items.length})`); setTimeout(()=>setStatus(''),800);
       }
       function renderAdminList(){
         const list=$('#itemsList'); list.innerHTML=''; const tpl=$('#itemRowTpl');
         if(!App.items.length){ list.innerHTML='<div class="p-4 text-sm text-zinc-500">No items yet. Add files above.</div>'; return; }
+        App.items.forEach((it,idx)=>{
+          const row=tpl.content.cloneNode(true);
+          const img=$('img',row); img.src=`data:${it.mime};base64,${it.data}`;
+          const inputs=$$('input',row);
+          const title=inputs[0]; const cat=inputs[1];
+          title.value = it.title || '';
+          title.oninput = e => it.title = e.target.value;
+          if (cat) { cat.value = it.category || ''; cat.oninput = e => it.category = e.target.value; }
+          const rm=$('button',row); rm.onclick=()=>{App.items.splice(idx,1); renderAdminList();};
+          list.appendChild(row);
+        });
+      }
         App.items.forEach((it,idx)=>{ const row=tpl.content.cloneNode(true); const img=$('img',row); img.src=`data:${it.mime};base64,${it.data}`; const title=$$('input',row)[0]; title.value=it.title; title.oninput=e=>it.title=e.target.value; const rm=$('button',row); rm.onclick=()=>{App.items.splice(idx,1); renderAdminList();}; list.appendChild(row); });
       }
-      async function importJSON(text){ try{ const obj=JSON.parse(text); if(!Array.isArray(obj.items)) throw new Error('Invalid'); App.items=obj.items.map(x=>({ title:x.title||'Untitled', mime:x.mime||'image/jpeg', data:x.data })); renderAdminList(); setStatus(`Imported ${App.items.length}`); setTimeout(()=>setStatus(''),800);} catch(e){ alert('Import failed: '+(e.message||e)); } }
-      function exportJSON(){ if(!App.items.length) return alert('Nothing to export'); const out={ version:1, generatedAt:new Date().toISOString(), title:App.title, items:App.items }; const blob=new Blob([JSON.stringify(out,null,2)],{type:'application/json'}); const a=document.createElement('a'); a.href=URL.createObjectURL(blob); a.download='gallery.json'; a.click(); URL.revokeObjectURL(a.href); }
-
-      // ------------------------- Viewer -------------------------
-      async function initViewer(){
-        $('#viewerUI').classList.remove('hidden');
-        $('#viewerBar').classList.remove('hidden');
-        $('#appTitle').textContent = 'Webkit Options';
-        $('#gridBtn').onclick = ()=>{ App.view='grid'; renderAll(); syncURL(); };
-        $('#flipBtn').onclick = ()=>{ App.view='flip'; renderAll(); syncURL(); };
-        window.addEventListener('keydown', (e)=>{ if (App.view==='flip'){ if (e.key==='ArrowLeft') step(-1); if (e.key==='ArrowRight') step(1); }});
-        try {
-          const res = await fetch('./gallery.json', { cache:'no-store' });
-          if (!res.ok) throw new Error('missing');
-          const json = await res.json();
-          App.title = json.title || 'Portfolio';
-          App.items = (json.items||[]).map(x=>({ title:x.title||'Untitled', src:`data:${x.mime||'image/jpeg'};base64,${x.data}` }));
-          $('#appTitle').textContent = 'Webkit Options';
-          setBanner('');
-          setStatus(`Loaded ${App.items.length} images`);
-        } catch (e) {
+      async function importJSON(text){
+        try{
+          const obj=JSON.parse(text);
+          if(!Array.isArray(obj.items)) throw new Error('Invalid');
+          App.items = obj.items.map(x=>({ title:x.title||'Untitled', category:x.category||'', mime:x.mime||'image/jpeg', data:x.data }));
+          renderAdminList();
+          setStatus(`Imported ${App.items.length}`);
+          setTimeout(()=>setStatus(''),800);
+        } catch(e) { alert('Import failed: ' + (e.message||e)); }
+      } catch (e) {
           setBanner('Could not find <code>gallery.json</code> in the repo root (same place as <code>index.html</code>). Use <code>?mode=admin</code> to export one, then upload it.');
           setStatus('No data file found');
           App.items=[];
@@ -201,31 +206,57 @@ tailwind={}; tailwind.config={ theme:{ extend:{ colors:{ brand:{ purple:'#8D6CE5
       }
       function setBanner(html){ const b=$('#banner'); if(!html){b.classList.add('hidden'); b.innerHTML=''; return;} b.classList.remove('hidden'); b.innerHTML=html; }
       function syncURL(){ const u=new URL(location); u.searchParams.set('mode','view'); u.searchParams.set('view', App.view==='flip'?'flip':'grid'); history.replaceState({},'',u); }
-      function renderAll(){ $('#gridBtn').classList.toggle('bg-[color:var(--brand)]/10', App.view==='grid'); $('#flipBtn').classList.toggle('bg-[color:var(--brand)]/10', App.view==='flip'); if (App.view==='grid'){ stopAutoplay(); $('#gridView').classList.remove('hidden'); $('#flipView').classList.add('hidden'); renderGrid(); } else { $('#gridView').classList.add('hidden'); $('#flipView').classList.remove('hidden'); renderFlip(); } }
-      function renderGrid(){ const host=$('#gridView'); host.innerHTML=''; if(!App.items.length){ host.innerHTML='<div class="text-sm text-zinc-500">No items to show.</div>'; return; } const grid=document.createElement('div'); grid.className='grid gap-3 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4'; App.items.forEach((it,i)=>grid.appendChild(gridCard(it,i))); host.appendChild(grid); }
+      function renderAll(){
+        renderTabs(); $('#gridBtn').classList.toggle('bg-[color:var(--brand)]/10', App.view==='grid'); $('#flipBtn').classList.toggle('bg-[color:var(--brand)]/10', App.view==='flip'); if (App.view==='grid'){ stopAutoplay(); $('#gridView').classList.remove('hidden'); $('#flipView').classList.add('hidden'); renderGrid(); } else { $('#gridView').classList.add('hidden'); $('#flipView').classList.remove('hidden'); renderFlip(); } }
+      function renderTabs(){
+        const ct = document.getElementById('catTabs');
+        if (!ct) return;
+        ct.innerHTML = '';
+        const unique = Array.from(new Set(App.items.map(i => (i.category||'')).filter(Boolean)));
+        const cats = ['all', ...unique];
+        cats.forEach(cat => {
+          const btn = document.createElement('button');
+          const active = (App.filter === cat) || (cat==='all' && App.filter==='all');
+          btn.className = 'px-3 py-1.5 text-sm rounded-xl border ' + (active ? 'bg-[color:var(--brand)] text-white border-[color:var(--brand)]' : 'bg-white hover:bg-zinc-50');
+          btn.textContent = cat==='all' ? 'View All' : cat;
+          btn.onclick = ()=>{ App.filter = cat; renderAll(); };
+          ct.appendChild(btn);
+        });
+        ct.classList.remove('hidden');
+      }
+
+      function renderGrid(){
+        const host=$('#gridView'); host.innerHTML='';
+        if(!App.items.length){ host.innerHTML='<div class="text-sm text-zinc-500">No items to show.</div>'; return; }
+        const grid=document.createElement('div'); grid.className='grid gap-3 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4';
+        const list = App.filter==='all' ? App.items : App.items.filter(i=>i.category===App.filter);
+        lbList = list;
+        list.forEach((it,i)=>grid.appendChild(gridCard(it,i)));
+        host.appendChild(grid);
+      }
       function gridCard(it, i){ const fig=document.createElement('figure'); fig.className='rounded-2xl overflow-hidden border bg-white cursor-zoom-in'; const img=new Image(); img.src=it.src; img.alt=it.title||''; img.loading='lazy'; img.className='w-full h-48 object-cover bg-zinc-100'; img.draggable=false; const cap=document.createElement('figcaption'); cap.className='p-2 text-lg font-semibold text-zinc-900'; cap.innerHTML=`<span class="truncate" title="${escapeHtml(it.title)}">${escapeHtml(it.title)}</span>`; fig.appendChild(img); fig.appendChild(cap); fig.addEventListener('click', ()=> openLightbox(i)); return fig; }
       let idx=0, autoTimer=null, autoMs=3000;
-      function renderFlip(){ const list=App.items; App.flat=list; if(!list.length){ $('#flipViewport').innerHTML='<div class="text-sm text-zinc-500">No items.</div>'; $('#flipMeta').textContent=''; return; } if(idx>=list.length) idx=0; showSlide(); $('#prevBtn').onclick=()=>step(-1); $('#nextBtn').onclick=()=>step(1); const playBtn=$('#playBtn'); const speedSel=$('#speedSel'); if(playBtn) playBtn.onclick=()=>{ if(autoTimer) stopAutoplay(); else startAutoplay(); }; if(speedSel) speedSel.onchange=(e)=>{ autoMs=parseInt(e.target.value,10)||3000; if(autoTimer) startAutoplay(); }; const vp=$('#flipViewport'); let sx=0,sy=0,tr=false; vp.onpointerdown=e=>{tr=true;sx=e.clientX;sy=e.clientY}; vp.onpointerup=e=>{ if(!tr)return; tr=false; const dx=e.clientX-sx,dy=e.clientY-sy; if(Math.abs(dx)>40&&Math.abs(dx)>Math.abs(dy)) step(dx<0?1:-1); } }
+      function renderFlip(){ const list = App.filter==='all' ? App.items : App.items.filter(i=>i.category===App.filter); App.flat=list; if(!list.length){ $('#flipViewport').innerHTML='<div class="text-sm text-zinc-500">No items.</div>'; $('#flipMeta').textContent=''; return; } if(idx>=list.length) idx=0; showSlide(); $('#prevBtn').onclick=()=>step(-1); $('#nextBtn').onclick=()=>step(1); const playBtn=$('#playBtn'); const speedSel=$('#speedSel'); if(playBtn) playBtn.onclick=()=>{ if(autoTimer) stopAutoplay(); else startAutoplay(); }; if(speedSel) speedSel.onchange=(e)=>{ autoMs=parseInt(e.target.value,10)||3000; if(autoTimer) startAutoplay(); }; const vp=$('#flipViewport'); let sx=0,sy=0,tr=false; vp.onpointerdown=e=>{tr=true;sx=e.clientX;sy=e.clientY}; vp.onpointerup=e=>{ if(!tr)return; tr=false; const dx=e.clientX-sx,dy=e.clientY-sy; if(Math.abs(dx)>40&&Math.abs(dx)>Math.abs(dy)) step(dx<0?1:-1); } }
       function showSlide(){ const it=App.flat[idx]; const vp=$('#flipViewport'); vp.innerHTML=''; const img=new Image(); img.src=it.src; img.alt=it.title||''; img.className='max-w-full max-h-full rounded-lg shadow'; img.draggable=false; vp.appendChild(img); const meta=`${idx+1} / ${App.flat.length} • ${it.title}`; const metaEl=$('#flipMeta'); if(metaEl) metaEl.textContent=meta; }
       function startAutoplay(){ stopAutoplay(); autoTimer=setInterval(()=>step(1), autoMs); const b=$('#playBtn'); if(b) b.textContent='Pause'; }
       function stopAutoplay(){ if(autoTimer){ clearInterval(autoTimer); autoTimer=null; } const b=$('#playBtn'); if(b) b.textContent='Play'; }
       function step(d){ idx=(idx+d+App.flat.length)%App.flat.length; showSlide(); }
 
       // Lightbox (full image on grid click)
-      let lbOpen=false, lbIdx=0;
+      let lbOpen=false, lbIdx=0, lbList=[];
       function openLightbox(i){
         lbIdx = i;
         const lb = document.getElementById('lightbox');
         const img = document.getElementById('lbImg');
         const cap = document.getElementById('lbCaption');
-        const it = App.items[lbIdx];
+        const it = lbList[lbIdx];
         if (!it || !lb || !img) return;
         img.src = it.src; img.alt = it.title || '';
         if (cap) cap.textContent = it.title || '';
         lb.classList.remove('hidden'); lbOpen = true;
       }
       function closeLightbox(){ const lb=document.getElementById('lightbox'); if(lb) lb.classList.add('hidden'); lbOpen=false; }
-      function lbStep(d){ if(!App.items.length) return; lbIdx=(lbIdx+d+App.items.length)%App.items.length; const it=App.items[lbIdx]; const img=document.getElementById('lbImg'); const cap=document.getElementById('lbCaption'); if(img&&it){ img.src=it.src; img.alt=it.title||''; } if(cap) cap.textContent=it.title||''; }
+      function lbStep(d){ if(!lbList.length) return; lbIdx=(lbIdx+d+lbList.length)%lbList.length; const it=lbList[lbIdx]; const img=document.getElementById('lbImg'); const cap=document.getElementById('lbCaption'); if(img&&it){ img.src=it.src; img.alt=it.title||''; } if(cap) cap.textContent=it.title||''; }
       document.addEventListener('keydown', (e)=>{ if(!lbOpen) return; if(e.key==='Escape') closeLightbox(); if(e.key==='ArrowLeft') lbStep(-1); if(e.key==='ArrowRight') lbStep(1); });
 
       // -------- Utils --------
